syntax = "proto3";

option go_package = "../pb";

message ValidateTransactionRequest {
    string id = 1;
    float amount = 3;
    string timestamp = 4;
}

message ValidateTransactionRespons {
    string value = 1;
}


service Idempotency {
    rpc ValidateRequest(ValidateTransactionRequest) returns (ValidateTransactionRespons) {}
  }